# data_from_plot

./: .dockerignore  CORRECOES_DETALHADAS.md  Dockerfile  GUIA_DE_USO.md  README.md  README_V2.md  README_V3.md  app.py  docker-compose.yml  install.sh  main.py  pyproject.toml  removepoints.py  requirements.txt  stclipboard.py
modules/: __init__.py  axis_detector.py  calibrator.py  calibrator_ultimate.py  calibrator_v2.py  calibrator_v3.py  data_types.py  exporter.py  graph_extractor.py  graph_extractor_ultimate.py  graph_extractor_v3.py  marker_detector.py  marker_detector_hybrid.py  marker_detector_v2.py  marker_detector_v3.py  preprocessor.py  test_extractor.py  test_modules.py  test_modules_v3.py
